welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: ';' expected but 'false' found.
while (estFaceMur())==false {
                      ^